--- a/css/style.css
+++ b/css/style.css
@@ -3097,7 +3097,7 @@ img.mfp-img{
 
 .prices-2{
   color: #fff;
-  background: url(../img/bg/prices2.jpg) 50% 0 no-repeat fixed;
+  background: url(../img/coursebg.jpg) 50% 0 no-repeat fixed;
   background-size: cover;
 }
 
